# exile-wasm

./: .gitignore  BUILD_WEB.md  CMakeLists.txt  README.md  WEB_STATUS.md  build_minimal_game.sh  build_terrain_test.sh  build_texture_test.sh  build_wasm_common.sh  build_wasm_dev.sh  build_wasm_prod.sh  build_web.sh  build_web_test.sh  update_web.sh
docs/: boe.js  events.js  filedialog.js  index.html  loading-overlay.js  menu.js
src/: damage.hpp  global.hpp  location.cpp  location.hpp  mathutil.hpp  sounds.cpp  sounds.hpp
src/audio/: sound_player.hpp  sound_player_sfml.cpp  sound_player_sfml.hpp  sound_player_webaudio.cpp
src/compat/: audio.hpp  boost_algorithm_string.hpp  boost_any.hpp  boost_compat.hpp  boost_lexical_cast.hpp  draw_dedup.hpp  dynamic_bitset.hpp  event.hpp  fmt_compat.hpp  graphics.hpp  input_stream.hpp  texture.hpp  texture.hpp.backup  tgui.hpp  time.hpp
src/fileio/: estreams.cpp  fileio.cpp  fileio.hpp  fileio_party.cpp  fileio_scen.cpp  special_parse.hpp  tagfile.hpp
src/game/: boe.actions.cpp  boe.actions.hpp  boe.combat.cpp  boe.dlgutil.cpp  boe.fileio.cpp  boe.fileio.hpp  boe.graphics.cpp  boe.graphics.hpp  boe.graphutil.cpp  boe.infodlg.cpp  boe.items.cpp  boe.locutils.hpp  boe.main.cpp  boe.main.hpp  boe.menu.cpp  boe.menu.hpp  boe.monster.cpp  boe.newgraph.cpp  boe.newgraph.hpp  boe.party.cpp  boe.specials.cpp  boe.startup.cpp  boe.text.cpp  boe.town.cpp  (+2 more)
web/: COMPILATION_BLOCKERS.md  PHASE2_SUMMARY.md  PHASE3_PROGRESS.md  PHASE3_STATUS.md  PHASE4_PLAN.md  README.md  RESOURCES.md  SESSION_SUMMARY.md  TODO.md  boe.menus.wasm.cpp  canvas_helpers.js  events.js  filedialog.css  index.html  main_web.cpp  minimal_game.cpp  savemanager.js  shell.html  simple_types.hpp  test_canvas.cpp  test_terrain.cpp  test_texture.cpp  web_stubs.cpp
(+82 files in other folders)
